--- a/views/profile.pug
+++ b/views/profile.pug
@@ -17,11 +17,15 @@ if person
       p.subtitle #{person.role}
     div
       p.title Branch
-      p.subtitle #{person.Branch}
+      p.subtitle #{person.branchId}
 else
   .profile
     div
       p.title Error
       p.subtitle User data not available.
 
+
+
+
 include ./layouts/footer
+
