--- a/views/manage-users.pug
+++ b/views/manage-users.pug
@@ -17,10 +17,10 @@ table.table
         td 
           form.manage-branch-form(action="/admin/update-branch", method="post")
             input(type="hidden", name="id", value=user.id)
-            select(name="branch", id="branch")
-              option(value="1", selected=user.Branch === '1') Branch 1
-              option(value="2", selected=user.Branch === '2') Branch 2
-              option(value="3", selected=user.Branch === '3') Branch 3
+            select(name="branch", id=`branch-${user.id}`)
+              option(value="1", selected=user.branchId === 1) Branch 1
+              option(value="2", selected=user.branchId === 2) Branch 2
+              option(value="3", selected=user.branchId === 3) Branch 3
             input(type="submit", value="update")
         td
           form.manage-user-form(action="/admin/update-role", method="post")
