--- a/views/branch-report.pug
+++ b/views/branch-report.pug
@@ -1,9 +1,9 @@
 include ./layouts/header
 
 block content
-  h1 Branch Manager Report
+  h1.register Branch Manager Report
 
-  table
+  table.tablereport
     thead
       tr
         th Order ID
