--- a/views/hqm-report.pug
+++ b/views/hqm-report.pug
@@ -1,9 +1,9 @@
 include ./layouts/header
 
 block content
-  h1 HQM Report
+  h1.register HQM Report
 
-  table
+  table.tablereport
     thead
       tr
         th Order ID
