--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,31 +1,27 @@
 include ./layouts/header
 
-h1
-  span.goback(onclick="window.history.back()") ←
-  | Profile
+h1.register Profile
 
 if person
   .profile
-    div
-      p.title ID
-      p.subtitle #{person.id}
-    div
-      p.title Email/username
-      p.subtitle #{person.email}
-    div
-      p.title Role
-      p.subtitle #{person.role}
-    div
-      p.title Branch
-      p.subtitle #{person.branchId}
+    table.profile-table
+      tr
+        td.attribute User ID
+        td #{person.id}
+      tr
+        td.attribute Email
+        td #{person.email}
+      tr
+        td.attribute Role
+        td #{person.role}
+      tr
+        td.attribute Branch
+        td #{person.branchId}
 else
   .profile
     div
       p.title Error
       p.subtitle User data not available.
-
-
-
 
 include ./layouts/footer
 
