--- a/public/style.css
+++ b/public/style.css
@@ -267,6 +267,44 @@ table.tablereport tr:hover {
   background-color: #f1f1f1;
 }
 
+.filter-form {
+  width: 80%;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #f1f1f17e;
+  margin-bottom: 50px;
+}
+
+.filter-form .form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.filter-form .form-control {
+  padding: 10px;
+  font-size: 1rem;
+  border: 2px solid #32210f;
+  border-radius: 5px;
+}
+
+.filter-form .btn {
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: white;
+  background-color: #791b1d;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  align-self: center;
+}
+
+.filter-form .btn:hover {
+  background-color: #5c1416;
+}
+
 /* style for create-order */
 .form-container {
   width: 40%;
